# TurtleBot3-Bridge-Package

./: README.md
TurtleBot3_Bridge/bridge_package/tb3_bridge/: CMakeLists.txt  package.xml
TurtleBot3_Bridge/bridge_package/tb3_bridge/config/: bridge_params.yaml  bridge_params_real.yaml  bridge_params_sim.yaml
TurtleBot3_Bridge/bridge_package/tb3_bridge/include/tb3_bridge/: tb3_bridge_node.hpp
TurtleBot3_Bridge/bridge_package/tb3_bridge/launch/: gazebo_only.launch.py  tb3_bridge.launch.py  tb3_bridge_sim.launch.py
TurtleBot3_Bridge/bridge_package/tb3_bridge/src/: tb3_bridge_node.cpp
TurtleBot3_Bridge/docs/: ELG5228_TB3_Bridge_Student_Guide.docx  ELG5228_TurtleBot3_Bridge_Manual.docx  ~$G5228_TB3_Bridge_Student_Guide.docx
TurtleBot3_Bridge/student_code/: bridge_test_terminal.py  roslib_wrapper.py  student_template.py
