<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tb3_bridge</name>
  <version>2.0.0</version>
  <description>
    Safety bridge between student path-planning nodes and a TurtleBot3 Burger.
    Now includes rosbridge_websocket so students only need pip install roslibpy.
  </description>

  <maintainer email="instructor@school.edu">Instructor</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_srvs</depend>
  <depend>diagnostic_msgs</depend>

  <exec_depend>rosbridge_server</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
